[gd_scene load_steps=4 format=2]

[ext_resource path="res://Entities/Entity.gd" type="Script" id=1]
[ext_resource path="res://UI/HealthBar/HealthBar.tscn" type="PackedScene" id=2]

[sub_resource type="CylinderShape" id=1]
radius = 0.85

[node name="Entity" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]

[node name="HealthBar" parent="." instance=ExtResource( 2 )]

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
